feat: created measurement controller and its service, created the routes, added the uuid dependency, changed the modeling and created a service for gemini

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
     "lib": ["es6"],
     "allowJs": true,
+    "composite": true,
     "outDir": "build",
     "rootDir": "src",
     "strict": true /* Enable all strict type-checking options. */,
