--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
     "@types/pg": "^8.11.6",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.4",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
@@ -26,6 +27,7 @@
     "@prisma/client": "^5.19.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "uuid": "^10.0.0"
   }
 }
