--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
     "@types/pg": "^8.11.6",
@@ -25,6 +26,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.17.1",
     "@prisma/client": "^5.19.0",
+    "axios": "^1.7.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "pg": "^8.12.0",
